# concord

./: .gitignore  CHANGELOG.md  README.md
.chainlink/: issues.db  session.json
concord/: .gitignore  CLAUDE.md  LICENSE  README.md  concord.example.toml
concord/server/: Cargo.toml  concord.db-shm  concord.toml
concord/server/.chainlink/.cache/: last-edit-time
concord/server/data/: concord.db-shm
concord/server/migrations/: 001_initial.sql  003_messaging_enhancements.sql  004_media_files.sql  005_atproto_blob_storage.sql  006_server_config.sql  007_organization_permissions.sql  008_user_experience.sql  009_threads_pinning.sql  010_moderation.sql  011_community.sql
concord/server/src/: config.rs  lib.rs  main.rs
concord/server/src/auth/: config.rs
concord/server/src/db/: models.rs  pool.rs
concord/server/src/db/queries/: attachments.rs  audit_log.rs  automod.rs  bans.rs  bookmarks.rs  categories.rs  channels.rs  community.rs  embeds.rs  emoji.rs  events.rs  forum_tags.rs  invites.rs  messages.rs  mod.rs  moderation.rs  notifications.rs  pins.rs  presence.rs  profiles.rs  roles.rs  search.rs  servers.rs  threads.rs  users.rs
concord/server/src/engine/: channel.rs  chat_engine.rs  embeds.rs  events.rs  mod.rs  permissions.rs  user_session.rs
concord/server/src/irc/: commands.rs  connection.rs  formatter.rs  listener.rs  mod.rs  numerics.rs  parser.rs
concord/server/src/web/: app_state.rs  atproto.rs  mod.rs  oauth.rs  pds_client.rs  rest_api.rs  router.rs  ws_handler.rs
concord/server/static/: index.html
concord/server/static/assets/: index-DIeuZYdD.css  index-r_MmlLty.js  index-r_MmlLty.js.map
concord/web/.chainlink/.cache/: last-edit-time
concord/web/src/api/: client.ts  types.ts
concord/web/src/components/auth/: LoginPage.tsx
concord/web/src/components/bookmarks/: BookmarksPanel.tsx
concord/web/src/components/channels/: ChannelList.tsx
concord/web/src/components/chat/: EmojiPicker.tsx  FormattedMessage.tsx  GifPicker.tsx  MessageInput.tsx  MessageList.tsx  VoiceRecorder.tsx  WaveformPlayer.tsx
concord/web/src/components/community/: CommunityPanel.tsx
concord/web/src/components/layout/: AppLayout.tsx
concord/web/src/components/members/: MemberList.tsx  UserProfilePopup.tsx
concord/web/src/components/moderation/: ModerationPanel.tsx
concord/web/src/components/navigation/: QuickSwitcher.tsx
concord/web/src/components/pins/: PinnedMessagesPanel.tsx
concord/web/src/stores/: chatStore.ts  uiStore.ts
(+7 files in other folders)
