[package]
name = "concord-server"
version = "0.1.0"
edition = "2024"
description = "Concord - Open source IRC-compatible chat server"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.49", features = ["full"] }

# HTTP / WebSocket framework
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Concurrent data structures
dashmap = "6.1"

# Identifiers
uuid = { version = "1.20", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Async stream utilities (needed for WebSocket split)
futures-util = "0.3"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
