[package]
name = "concord-server"
version = "0.1.0"
edition = "2024"
description = "Concord - Open source IRC-compatible chat server"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.49", features = ["full"] }
tokio-util = "0.7"

# HTTP / WebSocket framework
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Concurrent data structures
dashmap = "6.1"

# Identifiers
uuid = { version = "1.20", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Async stream utilities (needed for WebSocket split)
futures-util = "0.3"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }

# Authentication
oauth2 = "4.4"
jsonwebtoken = "10.3"
argon2 = "0.5"
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }

# AT Protocol (Bluesky) OAuth
atproto-oauth = { version = "0.13", default-features = false }
atproto-identity = { version = "0.13", default-features = false }
urlencoding = "2.1"

# HTTP cookie/header utilities
axum-extra = { version = "0.10", features = ["cookie", "typed-header"] }

# Configuration
toml = "0.8"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
